--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
+    "axios": "0.21.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.1",
     "redux": "4.0.5"
   },
   "devDependencies": {
